         Spectranet branch changes, fix breakpoint adding, limit RAM page
         search to active pages for the current machine (fixes bug #3470623)
         (Sergio Baldoví).
20120121 peripherals/{nic/w5100.c,spectranet.c},ui/gtk/pokemem.c: include
         <string.h> for memset template (Fred).
20120121 fuse.c,peripherals/{ay.[ch],fuller.[ch],if2.[ch],kempmouse.[ch],
         melodik.[ch],scld.[ch],speccyboot.[ch],specdrum.[ch],ula.[ch]},
         pokefinder/pokefinder.[ch],profile.[ch],slt.[ch],z80/z80.[ch]: even
         more init functions that cannot fail.
20120121 debugger/breakpoint.c,event.[ch],machine.c,peripherals/disk/beta.c,
         rzx.c,spectrum.c,tape.[ch],timer/timer.c: make event_add_with_data()
         just blow up if it can't allocate memory.
20120121 ui/win32/{debugger.c,debugger.rc}: various fixes for Win32 debugger
         memory map (patch #3476936) (Sergio).
20120121 ui/win32/{binary.c,fileselector.c,options.pl,picture.c,roms.c}: fix
         up Win32 for recent error handling changes (patch #3476971) (Sergio).
20120121 z80/coretest.c: fix up for event_add_with_data() change (thanks,
         guesser).
20120122 compat.h,compat/{unix/socket.c,win32/socket.c},
         peripherals/{nic/w5100.c,w5100_socket.c},utils.[ch]: make Win32 build
         at least compile (almost entirely guesser).
20120122 compat/{unix/socket.c,win32/socket.c},peripherals/nic/{w5100.c,
         w5100_internals.h,w5100_socket.c}: make Win32 build work (Sergio).
20120123 compat/win32/socket.c,peripherals/nic/w5100_socket.c: final tweaks to
         Win32 Spectranet code (Sergio).
20120126 hacking/spectranet.txt: add some Spectranet documentation.
20120203 sound.[ch],sound/coreaudiosound.c: remove remnants of
         sound_stereo_beeper, stereo is now determined exclusively by AY
         configuration (Fred).
20120204 sound.c,sound/coreaudiosound.c: fix the removal of sound_stereo_beeper
         (Fred).